IF( WIN32 )
    ADD_DEFINITIONS( /wd4250 )
ENDIF( WIN32 )


SET(APPLICATION_NAME oocharacter )


ADD_EXECUTABLE(${APPLICATION_NAME} ${APPLICATION_NAME}.cpp)


TARGET_LINK_LIBRARIES(  ${APPLICATION_NAME}
                        osgODEUtil
                        osgDB
)


IF(NOT WIN32)

    INSTALL(    TARGETS ${APPLICATION_NAME}
                RUNTIME DESTINATION bin)

ELSE(NOT WIN32)



    INSTALL(    TARGETS ${APPLICATION_NAME}
                RUNTIME DESTINATION bin
                LIBRARY DESTINATION lib
                ARCHIVE DESTINATION lib)



ENDIF(NOT WIN32)
